# RRR-datacreation

./: .gitignore  README.md  bertopic_topic_info.csv  bertopic_topic_top_words.csv  main.py  newclass.ipynb  newdata.ipynb  pixi.toml  pyproject.toml  results_explore.ipynb  text_analysis_categories.qmd  topicmodel.ipynb  topics_1-10_terms.csv
do-not-touch/: bertopic-modeling-fixed.ipynb  bertopic-modeling.ipynb  topics.txt
kaggle_nbs/: bertopic-modeling.ipynb  concept-extraction.ipynb  newdata.ipynb  topic-modeling-gensim.ipynb  topic-modeling.ipynb
