[project]
name = "rrr-datacreation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
]
